k8s/talos/prod/cilium/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internet
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: default
  name: private-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: web
      protocol: HTTP
      port: 80
      hostname: "*.o.cavnet.cloud"
    - name: websecure
      protocol: HTTPS
      port: 443
      hostname: "*.o.cavnet.cloud"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: any.o.cavnet.cloud-cert
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: private-gateway-https-redirect
spec:
  parentRefs:
    - name: private-gateway
      # Only attach to the HTTP listener to avoid a redirect loop
      sectionName: web
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: kube-system
  name: hubble-ui
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
  hostnames:
    - hubble.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: internet
  name: public-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: webpublic
      protocol: HTTP
      port: 80
      hostname: "*.cavnet.io"
      allowedRoutes:
        namespaces:
          from: All
